# archivator

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
src/archivator/: arciv.py
src/archiver/: __init__.py
src/archiver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
