[metadata]
name = archivator
version = 0.0.1
author = Nikita Starovoitov
author_email = nikita.starr02@gmail.com
description = Package for archiving in .zip form
long_description = file: README.md
url = https://github.com/StarovoitovNik/archivator
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 7

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src